fix:mobile overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,10 @@ padding: 70px 0 30px 0;
   border-color:#00000052;
   font-family: inherit;
 }
+.input-wide:focus{
+  outline: 2px solid #84CAFF;
+  transition: ease-in-out ;
+}
 .t-area{
   height: 70px;
 }
@@ -153,4 +157,15 @@ footer img{
   width: 50%;
 }
 
+.contact-forms{
+  width: 90%;
+  padding-top: 20px;
+}
+.form-names{
+  flex-direction: column;
+  gap: 1em;
+}
+.input-wide,.send-msg button{
+  width: unset;
+}
 }
